# dsm050-midterm

./: analysis.ipynb  pyproject.toml  report.docx  requirements.txt
data/: API_PER_SA_ALLSA.COV_POP_TOT_DS2_en_csv_v2_329606.csv
