[project]
name = "dsm050-midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "country-converter>=1.3.2",
    "geopandas>=1.1.4",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
]
